--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.3",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "tailwindcss": "^4.0.14",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
